# Embedded_Project

./: .gitignore  .gitmodules  CMakeLists.txt  avr-toolchain.cmake  shell.nix
.github/workflows/: init.yml
lib/: CMakeLists.txt
lib/init/: ADCSRA.cpp  ADMUX.cpp  CMakeLists.txt  init.cpp  init.hpp
lib/inputs/: CMakeLists.txt
lib/inputs/Potentiometer/: CMakeLists.txt  Potentiometer.cpp  Potentiometer.hpp
lib/outputs/: CMakeLists.txt
lib/outputs/Digitals/: CMakeLists.txt  DigitalOutput.cpp  DigitalOutput.hpp  LCD.cpp  LCD.hpp  SerialTransmit.hpp
scripts/: build.sh  deploy.sh
src/: CMakeLists.txt  main.cpp
